# insurance-thin-data

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarks/: run_benchmark.py
notebooks/: benchmark.py  benchmark_thin_data.py
src/insurance_thin_data/: __init__.py
src/insurance_thin_data/tabpfn/: __init__.py  backends.py  benchmark.py  model.py  relativities.py  report.py  validators.py
src/insurance_thin_data/transfer/: __init__.py  cann_transfer.py  diagnostic.py  gbm_transfer.py  glm_transfer.py  pipeline.py  shift.py
tests/: conftest.py  test_backends.py  test_benchmark.py  test_cann_transfer.py  test_diagnostic.py  test_diagnostic_extended.py  test_gbm_transfer.py  test_glm_transfer.py  test_glm_transfer_extended.py  test_model.py  test_pipeline.py  test_pipeline_extended.py  test_relativities.py  test_report.py  test_shift.py  test_shift_extended.py  test_validators.py
