[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-thin-data"
version = "0.1.1"
description = "Foundation models and transfer learning for thin-data insurance pricing segments"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "insurance",
    "pricing",
    "tabpfn",
    "transfer-learning",
    "actuarial",
    "tabular",
    "foundation-model",
    "thin-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",

    "scikit-learn>=1.3",
    "scipy>=1.10",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
tabpfn = ["tabpfn>=6.0"]
tabicl = ["tabicl>=0.1"]
catboost = ["catboost>=1.2"]
torch = ["torch>=2.0"]
report = ["jinja2>=3.1"]
all = [
    "tabpfn>=6.0",
    "tabicl>=0.1",
    "catboost>=1.2",
    "torch>=2.0",
    "jinja2>=3.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-thin-data"
Repository = "https://github.com/burning-cost/insurance-thin-data"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_thin_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
